force-app/main/default/objects/FilterState__c/FilterState__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores current page, video, contact, and catalog filter state so LWCs and agent actions can share session context.</description>
    <label>Session State</label>
</CustomObject>