force-app/main/default/objects/FilterState__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <length>50</length>
    <type>Text</type>
</CustomField>