force-app/main/default/objects/FilterState__c/fields/Action_Video_Id__c.field-meta.xml
<CustomField>
    <fullName>Action_Video_Id__c</fullName>
    <label>Action Video Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>