force-app/main/default/objects/FilterState__c/fields/Current_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_Contact_Id__c</fullName>
    <label>Current Contact Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>